test/src/e2e_vm_tests/test_programs/should_fail/attributes_missing_annotated_item/src/trailing_single_outer_attribute.sw
library;

#[allow(dead_code)]